refactor: clean NvdClient (DRY, helpers) + add CveItem DTO + pub* config prep

--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -14,3 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+nvd.api.last-mod-start-date=2025-08-12T14:14:54.182Z
+nvd.api.last-mod-end-date=2025-09-11T14:14:54.182Z
+
+nvd.api.pub-start-date=
+nvd.api.pub-end-date=
