--- a/src/main/resources/date.properties
+++ b/src/main/resources/date.properties
@@ -1,5 +1,8 @@
+# dates par défaut utilisées par TA route HTTP (si tu n?envoies rien dans Postman)
+cve.start-date=2025-09-01
+cve.end-date=2025-09-15
 
-
+# valeurs fixes pour tester le client NVD sans la route
 nvd.api.last-mod-start-date=2025-08-12T14:14:54.182Z
 nvd.api.last-mod-end-date=2025-09-16T14:14:54.182Z
 
